--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# OSX
 #
 .DS_Store
 
@@ -28,6 +27,10 @@ build/
 .gradle
 local.properties
 *.iml
+
+# Visual Studio Code
+#
+.vscode/
 
 # node.js
 #
